# obsidian-git-sync-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-containers.yml
env/: obsidian-mcp.env.example  obsidian-sync.env.example
obsidian-sync/: Dockerfile  README.md  bootstrap.sh  entrypoint.sh
openspec/: config.yaml
openspec/changes/archive/2026-06-22-change-trigger/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-change-trigger/specs/change-detection/: spec.md
openspec/changes/archive/2026-06-22-container-deployment/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-container-deployment/specs/container-deployment/: spec.md
openspec/changes/archive/2026-06-22-docs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-docs/specs/docs/: spec.md
openspec/changes/archive/2026-06-22-frontmatter-stamping/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-frontmatter-stamping/specs/frontmatter-stamping/: spec.md
openspec/changes/archive/2026-06-22-git-worker/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-git-worker/specs/git-worker/: spec.md
openspec/changes/archive/2026-06-22-monitoring/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-monitoring/specs/monitoring/: spec.md
openspec/changes/archive/2026-06-22-obsidian-sync-sidecar/: design.md  proposal.md
openspec/changes/archive/2026-06-22-obsidian-sync-sidecar/specs/obsidian-sync-sidecar/: spec.md
openspec/changes/archive/2026-06-22-scaffold-extension/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-scaffold-extension/specs/git-sync-extension/: spec.md
openspec/changes/archive/2026-06-28-git-repo-bootstrap/: proposal.md  tasks.md
openspec/changes/archive/2026-06-29-bootstrap-reset/: proposal.md
openspec/changes/archive/2026-06-29-git-committer-identity-check/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-29-git-committer-identity-check/specs/git-sync-extension/: spec.md
openspec/changes/archive/2026-06-29-retro-sidecar-entrypoint-volumes/: design.md  tasks.md
openspec/changes/archive/2026-06-29-sidecar-auto-start/: proposal.md  tasks.md
openspec/changes/archive/2026-06-29-vault-git-token-helper/specs/git-sync-extension/: spec.md
openspec/changes/archive/2026-07-02-persist-oauth-client-registry/: proposal.md  tasks.md
openspec/changes/archive/2026-07-08-named-volume-vault-mount/: design.md  tasks.md
openspec/changes/bootstrap-reset/: design.md  tasks.md
openspec/changes/bootstrap-reset/specs/obsidian-sync-sidecar/: spec.md
openspec/changes/change-trigger/: tasks.md
openspec/changes/container-build-workflow/: design.md  proposal.md  tasks.md
openspec/changes/container-build-workflow/specs/container-ci/: spec.md
openspec/changes/container-deployment/: tasks.md
openspec/changes/docs/: tasks.md
openspec/changes/frontmatter-stamping/: tasks.md
openspec/changes/git-committer-identity-check/: tasks.md
openspec/changes/git-repo-bootstrap/: design.md
openspec/changes/git-repo-bootstrap/specs/container-deployment/: spec.md
openspec/changes/git-repo-bootstrap/specs/docs/: spec.md
openspec/changes/git-worker/: proposal.md  tasks.md
openspec/changes/monitoring/: tasks.md
openspec/changes/named-volume-vault-mount/: proposal.md  tasks.md
openspec/changes/named-volume-vault-mount/specs/container-deployment/: spec.md
openspec/changes/obsidian-sync-sidecar/: tasks.md
openspec/changes/persist-oauth-client-registry/: design.md  tasks.md
openspec/changes/retro-sidecar-entrypoint-volumes/: proposal.md
openspec/changes/retro-sidecar-entrypoint-volumes/specs/container-deployment/: spec.md
openspec/changes/retro-sidecar-entrypoint-volumes/specs/docs/: spec.md
openspec/changes/scaffold-extension/: design.md  proposal.md  tasks.md
openspec/changes/scaffold-extension/specs/git-sync-extension/: spec.md
openspec/changes/sidecar-auto-start/: design.md  tasks.md
openspec/changes/sidecar-auto-start/specs/obsidian-sync-sidecar/: spec.md
openspec/changes/vault-git-token-helper/: design.md  proposal.md  tasks.md
openspec/changes/vault-git-token-helper/specs/git-credential-helper/: spec.md
openspec/specs/change-detection/: spec.md
openspec/specs/container-ci/: spec.md
openspec/specs/container-deployment/: spec.md
openspec/specs/docs/: spec.md
openspec/specs/frontmatter-stamping/: spec.md
openspec/specs/git-credential-helper/: spec.md
openspec/specs/git-sync-extension/: spec.md
openspec/specs/git-worker/: spec.md
openspec/specs/monitoring/: spec.md
openspec/specs/obsidian-sync-sidecar/: spec.md
scripts/: git-sync.sh  heartbeat.sh  obsidian-git-sync.sh  obsidian-headless-heartbeat.sh  setup.sh  stamp-frontmatter.py
src/obsidian_git_sync/: __init__.py  config.py  credential_helper.py  events.py  extension.py  git_ops.py  heartbeat.py  main.py  stamping.py  worker.py
systemd/: obsidian-git-sync.service  obsidian-git-sync.timer  obsidian-git.service  obsidian-git.timer  obsidian-headless-sync.service  obsidian-mcp.service  obsidian-sync.service
tests/: conftest.py  test_change_trigger.py  test_credential_helper.py  test_extension.py  test_git_worker.py  test_heartbeat.py  test_stamping.py
(+2 files in other folders)
