[project]
name = "obsidian-git-sync-mcp"
version = "0.1.0"
description = "Git-sync extension for the obsidian-web-mcp server: commits and syncs vault changes in-process, env-gated and fail-closed."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Depend on the upstream server via a commit pin on the fork's main:
    # main carries the write-listener seam the change-trigger needs (PR #62),
    # the OAuth protected-resource subpath fix (resource includes VAULT_MCP_PATH,
    # for strict RFC 9728 clients), and the re-baseline onto upstream. Pinned to a
    # SHA, not the branch, so builds are reproducible and the Docker layer cache
    # re-resolves the dep on each bump.
    # TODO: repin to an upstream/PyPI release once the seam lands upstream.
    "obsidian-web-mcp @ git+https://github.com/jjsmackay/obsidian-web-mcp@48ebdf0bae9fe4f225f32da0597e357412afba9b",
    # Formatting-preserving YAML round-trip for frontmatter stamping: preserves
    # users' quotes, key order, and comments, and (with a quote-strip post-process)
    # emits the Obsidian Linter's unquoted timestamp form so desktop and server
    # stamps don't thrash. PyYAML would reserialise and drop all of that.
    "ruamel.yaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
obsidian-git-sync-mcp = "obsidian_git_sync.main:main"
# Env-reading git credential helper. The name maps to the ``credential.helper``
# value ``obsidian-env`` (git prefixes ``git-credential-``); see credential_helper.py.
git-credential-obsidian-env = "obsidian_git_sync.credential_helper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The upstream dep is a direct git reference (until PR #62 merges); hatchling
# rejects direct references in project metadata unless explicitly allowed.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_git_sync"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
